# abc-algorithm-solve-vrp-problem

./: CMakeLists.txt  README.md  main.cpp
algorithm/: bee.h  bee_colony.cpp  bee_colony.h  local_search.cpp  local_search.h  neighbor_operator.cpp  neighbor_operator.h
include/: matplotlibcpp.h
results/A/: A-n32-k5.out  A-n33-k5.out  A-n33-k6.out  A-n34-k5.out  A-n36-k5.out  A-n37-k5.out  A-n37-k6.out  A-n38-k5.out  A-n39-k5.out  A-n39-k6.out  A-n44-k6.out  A-n45-k7.out  A-n54-k7.out  A-n55-k9.out  A-n60-k9.out  A-n61-k9.out  A-n62-k8.out  A-n63-k9.out  A-n65-k9.out  A-n69-k9.out  results.csv
results/B/: B-n31-k5.out  B-n34-k5.out  B-n35-k5.out  B-n38-k6.out  B-n39-k5.out  B-n41-k6.out  B-n43-k6.out  B-n44-k7.out  B-n45-k5.out  B-n45-k6.out  B-n50-k7.out  B-n50-k8.out  B-n51-k7.out  B-n52-k7.out  B-n56-k7.out  B-n57-k7.out  B-n57-k9.out  B-n63-k10.out  B-n64-k9.out  B-n66-k9.out  B-n67-k10.out  B-n68-k9.out  B-n78-k10.out  results.csv
results/E/: E-n101-k14.out  E-n101-k8.out  E-n22-k4.out  E-n23-k3.out  E-n30-k3.out  E-n33-k4.out  E-n51-k5.out  E-n76-k10.out  E-n76-k14.out  E-n76-k7.out  E-n76-k8.out  results.csv
results/F/: F-n135-k7.out  F-n45-k4.out  F-n72-k4.out
results/G/: G-n262-k25.out
results/M/: M-n101-k10.out  M-n121-k7.out  M-n151-k12.out  M-n200-k16.out  M-n200-k17.out
results/P/: P-n101-k4.out  P-n16-k8.out  P-n19-k2.out  P-n20-k2.out  P-n21-k2.out  P-n22-k2.out  P-n22-k8.out  P-n23-k8.out  P-n40-k5.out  P-n45-k5.out  P-n50-k10.out  P-n50-k7.out  P-n50-k8.out  (+3 more)
utils/: problem.cpp  problem.h  solution.cpp  solution.h  visualize.cpp  visualize.h
(+42 files in other folders)
